// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders HeaderBack 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginLeft": 16,
        "width": 24,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Object {
        "color": "red",
        "fontFamily": "icomoon",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "normal",
      }
    }
    text="kebeticon-chevron-left"
  />
</View>
`;

exports[`renders HeaderClose 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "marginLeft": 16,
        "width": 24,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Object {
        "color": "red",
        "fontFamily": "Ionicons",
        "fontSize": 40,
        "fontStyle": "normal",
        "fontWeight": "normal",
      }
    }
    text="ionicon-ios-close"
  />
</View>
`;
